feat: halaman login dan register

--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
     "dev": "npx tailwindcss -i ./public/css/input.css -o ./public/css/index.css --watch"
   },
   "dependencies": {
-    "@tailwindcss/cli": "^4.0.5",
-    "tailwindcss": "^4.0.5"
-  }
+    "@tailwindcss/cli": "^4.0.6",
+    "tailwindcss": "^4.0.6"
+  },
+  "name": "kpl2025",
+  "version": "1.0.0",
+  "description": "Selamat datang di repositori _Manajemen Artikel_! 🚀",
+  "main": "tailwind.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
