--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "main": "tailwind.config.js",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16"
+  }
 }
