--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.0.6",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "^4.0.6",
+    "typography": "^0.16.24"
   },
   "name": "kpl2025",
   "version": "1.0.0",
